add opacity to button

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     Make money on your schedule with deliveries or <br> rides—or both. You can use your own car or choose a rental <br> through Uber.
                 </p>
                 <div class="flex mt-8">
-                    <div class="bg-black text-white w-[120px] px-3 py-2 rounded-lg">
+                    <div class="bg-black text-white w-[120px] px-3 py-2 rounded-lg hover:opacity-85">
                         <button class="ml-2 text-sm">Get started</button>
                     </div>
                     <div class="border-b-2 cursor-pointer border-gray-300 ml-4 mt-2 transition ease-in-out delay-100 hover:border-black">Already have an account? Sign in</div>
@@ -115,7 +115,7 @@
                     Uber for Business is a platform for managing global rides and <br> meals, and local deliveries, for companies of any size.
                 </p>
                 <div class="flex mt-8">
-                    <div class="bg-black text-white w-[120px] px-3 py-2 rounded-lg">
+                    <div class="bg-black text-white w-[120px] px-3 py-2 rounded-lg hover:opacity-85">
                         <button class="ml-2 text-sm">Get started</button>
                     </div>
                     <div class="border-b-2 cursor-pointer border-gray-300 ml-4 mt-2 transition ease-in-out delay-100 hover:border-black">Check out our solutions</div>
@@ -139,7 +139,7 @@
                 <p class="text-sm">
                     Connect with thousands of drivers and earn more per week <br> with Uber’s free fleet management tools.
                 </p>
-                <div class="bg-black text-white w-[120px] px-3 py-2 rounded-lg mt-4">
+                <div class="bg-black text-white w-[120px] px-3 py-2 rounded-lg mt-4 hover:opacity-85">
                     <button class="ml-2 text-sm">Get started</button>
                 </div>
             </div>
